# test-donator

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  python-tests.yml
src/donate_a_pytest/: __init__.py  decorators.py  interface.py  main.py  model.py  plugin.py  tests_crawler.py  utils.py
tests/: example_functions.py  test_any_output_type.py  test_crawler.py  test_decorator.py  test_interface.py  test_main.py  test_model.py
tests/test_data/sample_function/: sample_function.json  sample_function.yaml
tests/test_data/sample_function_1/: sample_function_1.json  sample_function_1.yaml
