[project]
name = "donate-a-pytest"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "pydantic (>=2.11.2,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[project.scripts]
donate-pytest = "donate_a_pytest.main:main"

[tool.poetry]
packages = [{include = "donate_a_pytest", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"
black = "^24.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
