[project]
name = "donate-a-pytest"
version = "0.1.4"
description = "A pytest extension for sharing test cases"
authors = [
    {name = "Trung Pham", email = "trungphamquoc@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["pytest", "testing", "test-cases", "sharing-tests"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "pydantic (>=2.11.2,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/donate-a-pytest"
"Bug Tracker" = "https://github.com/yourusername/donate-a-pytest/issues"
"Documentation" = "https://github.com/yourusername/donate-a-pytest#readme"

[project.scripts]
donate-pytest = "donate_a_pytest.main:main"

[project.entry-points.pytest11]
donate = "donate_a_pytest.plugin"

[tool.poetry]
packages = [{include = "donate_a_pytest", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"
black = "^24.3.0"

[tool.pytest.ini_options]
markers = [
    "donate: mark tests that are created via the @register_for_donation decorator"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
